# crsd-inspector

./: .gitignore  README.md  analyze_prf_sequence.py  app.py  check_continuous.py  check_example2_truth.py  compare_crsd.py  create_example_4.py  create_example_5.py  dash_app.py  demo.py  demo_enhanced.py  pulse_extraction_viewer.py  pyproject.toml  requirements.txt  test_detection.py  test_integrated_mf.py  test_mf.py  test_mf_crsd.py  test_mf_proper.py  test_mf_targets.py  test_rising_edge.py  test_static.py  test_staticdash.py  todo.md
crsd_generator/: __init__.py  api.py  cli.py  models.py
crsd_inspector/: __init__.py  app.py  app_definition.py  cli.py  generate.py  gui.py  processing.py  renderflow.py
crsd_inspector/workflows/: __init__.py  basic_stats.py  pulse_extraction.py  pulse_extraction_old.py  quality_assessment.py  range_doppler.py  range_doppler_processing.py  signal_analysis.py  staggered_prf.py  workflow.py
crsd_inspector/workflows/plot/: __init__.py  range_doppler_plots.py  signal_analysis_plots.py
crsd_inspector/workflows/proc/: __init__.py  signal_analysis_nodes.py
crsd_inspector/workflows/src/: __init__.py
crsd_inspector/workflows/summary/: __init__.py  (+2 more)
examples/: README.md  create_example_crsd.py  example_1.crsd  example_2.crsd  example_3.crsd  generate_all_tx_variants.py  generate_examples.py
examples/generators/: README.md  create_example_4.py  create_example_5.py  create_example_6.py
utils/: README.md  pulse_extraction_viewer.py
workflow_renderer_streamlit/: __init__.py  app.py
workflow_runtime/: __init__.py  contracts.py  discovery.py
workflows/: README.md  basic_stats.py  quality_assessment.py  range_doppler.py
(+7 files in other folders)
