[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crsd-inspector"
version = "0.1.0"
description = "CRSD file analysis toolkit with Streamlit interface"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Brian Day"}
]
keywords = ["radar", "crsd", "signal-processing", "sar"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.31.0",
    "dagex>=2026.1",
    "sarkit>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "plotly>=5.18.0",
    "lxml>=4.9.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

generator = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
crsd-inspector = "crsd_inspector.app:main"
crsd-generate = "crsd_generator.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/crsd-inspector"
Repository = "https://github.com/yourusername/crsd-inspector"

[tool.setuptools.packages.find]
include = ["crsd_inspector*", "crsd_generator*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
